media/css/m24/components/navigation-refresh.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

@use '../vars/lib' as *;

$margin-top: 58px; // top margin offset for mobile navigation menu

// * -------------------------------------------------------------------------- */
// Header/Nav bar - excluding menus

.m24-navigation {
    background-color: $color-white;
    border-bottom: $border-width solid $m24-color-light-mid-gray;
}

// Sticky navigation styles

@supports (position: sticky) {
    html.mzp-has-sticky-navigation {
        .m24-navigation.m24-mzp-is-sticky {
            position: sticky;
            z-index: 1000;
            left: 0;
            top: 0;
            @include transition(transform 300ms ease-in-out, box-shadow 300ms ease-in-out);

            &.mzp-is-scrolling {
                // Shadow colors are equivalent to $color-ink-90, $color-blue-90, $color-ink-90
                // We can't use a $box-shadow token here because it needs a different size and offset
                box-shadow: 0 0 6px 1px rgba(29, 17, 51, 0.04), 0 0 8px $border-width rgba(9, 32, 77, 0.12), 0 0 5px -3px rgba(29, 17, 51, 0.12);
            }

            &.mzp-is-hidden {
                @include transform(translate(0, -110%));
            }

            @media (prefers-reduced-motion: reduce) {
                position: static;
            }
        }
    }
}

// wrappers

.m24-c-navigation-container {
    @include clearfix;
    margin: 0 auto;
    max-width: $content-max;

    @media #{$mq-md} {
        align-items: start;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        position: static;

        &::after {
            display: none;
        }
    }
}

.m24-c-navigation-l-content {
    @include clearfix;
    padding: $spacer-xs $h-grid-xs;
    position: relative;

    @media #{$mq-md} {
        padding: $spacer-xs $h-grid-md 0;
    }

    @media #{$mq-xl} {
        padding: $spacer-xs $h-grid-xl 0;
    }
}

// logo & link to homepage

.m24-c-navigation-logo-link {
    display: block;
}

.m24-c-navigation-logo-image {
    height: 40px;
    width: auto;
    display: block;
}

// Open/close button to display menu on mobile

.m24-c-navigation-menu-button {
    display: none;
}

.js .m24-c-navigation-menu-button {
    background-color: transparent;
    border: none;
    color: $color-black;
    display: block;
    float: right;
    font-weight: 600;
    height: 32px;
    margin: 4px 0 0;
    padding: 0;
    position: relative;
    text-decoration: underline;
    text-underline-offset: 2px;
    text-decoration-thickness: 1px;

    &.mzp-is-active {
        background: transparent url('/media/protocol/img/icons/close.svg') center center no-repeat;
        width: 40px;
        @include image-replaced;

        &::after {
            content: none;
        }
    }

    @media #{$mq-md} {
        display: none;
        margin: 24px 0;
    }
}

[dir='rtl'].js .m24-c-navigation-menu-button {
    float: left;
}

// Mobile navigation menu with JS enabled.
.js .m24-c-navigation-items {
    display: none;

    @media (max-width: #{$screen-md - 1px}) {
        &.mzp-is-open {
            display: block;
            height: calc(100vh - $margin-top);
            margin-top: $margin-top;
            overflow: hidden auto;
            padding-top: 0;
            position: fixed;
            right: 0;
            top: 0;
            width: 100%;
            z-index: 100;
        }
    }

    @media #{$mq-md} {
        display: block;
    }
}

// wrapper for the menu

.m24-c-navigation-menu {
    margin-bottom: 0;
    width: 100%;

    @media #{$mq-md} {
        border-top: transparent;
        width: auto;
    }
}

// * -------------------------------------------------------------------------- */
// Menu

// Basic typography

.m24-c-menu {
    h2, h3 {
        font-size: remify(18px);
        margin: 0;
    }

    a:link,
    a:visited {
        color: $color-black;
        text-decoration: none;
    }

    a:hover,
    a:focus {
        font-weight: bold;
        text-decoration: underline;
        text-underline-offset: 2px;
        text-decoration-thickness: 1px;
    }

    // link out icon
    a[href^="http"]::after {
        content: '';
        background: url('/media/img/icons/external.svg') no-repeat bottom center / contain;
        display: inline-block;
        height: 1em;
        margin-left: $spacing-sm;
        vertical-align: baseline;
        width: 12px
    }
}

.m24-c-menu .mzp-has-drop-down.m24-c-menu-category {
     h2::after {
        content: '';
        background: url('/media/img/icons/caret-sprite.svg') no-repeat bottom left / auto 12px;
        display: inline-block;
        height: 1em;
        margin-left: $spacing-sm;
        vertical-align: baseline;
        width: 12px;
    }

    &.mzp-is-selected {
        h2::after {
            background-position: bottom right;
        }
    }
}

// Basic hover interactions with JavaScript disabled or not supported.
.m24-c-menu.m24-mzp-is-basic .m24-c-menu-category {
    padding-top: 12px;

    @media #{$mq-md} {
        &.mzp-has-drop-down:hover,
        &.mzp-has-drop-down:focus {
            .m24-c-menu-panel {
                display: block;
            }
        }

        &.mzp-has-drop-down:focus-within {
            .m24-c-menu-panel {
                display: block;
            }
        }
    }
}

// Enhanced hover interactions with JavaScript enabled.
.m24-c-menu.m24-mzp-is-enhanced {
    padding-top: 12px;
    padding-bottom: 100px; // space for fixed download button

    @media #{$mq-md} {
        padding-bottom: 0;
    }

    &.mzp-is-selected {
        display: block;
    }

    .m24-c-menu-category {
        @media #{$mq-md} {
            &.mzp-is-selected {
                .m24-c-menu-panel {
                    display: block;
                }

                .m24-c-menu-button-close {
                    display: block;
                }
            }

            &::after {
                display: none;
            }
        }
    }
}


// * -------------------------------------------------------------------------- */
// Categories (the list of the top level items which contain the panels, all categories have a title and may have panels)

.m24-c-menu-category-list {
    padding: 0;
    margin-bottom: 0;
    position: relative;

    @media #{$mq-md} {
        position: static;
        display: flex;
        justify-content: space-between;
    }
}

.m24-c-menu-category {
    padding: 8px 16px;
    position: relative;
    width: calc(100% - 32px);
    z-index: 1000;

    @media #{$mq-md} {
        padding: 0 $spacer-md $spacer-sm;
        position: static;
        width: auto;
    }
}

.m24-c-menu-category-link {
    display: flex;
    font-size: $text-body-md;
    justify-content: flex-end;
    margin: $spacer-lg $spacer-lg 0;
    padding: 0;

    a:link,
    a:visited {
        display: flex;
        font-weight: 600;
        position: relative;
        width: fit-content;
    }
}

// * -------------------------------------------------------------------------- */
// Menu panels

// Menu title (appears whether there is a panel or not)

.m24-c-menu-title {
    display: block;
    margin-bottom: $spacer-sm;

    @media #{$mq-md} {
        margin-bottom: 0;

        h2 {
            font-weight: inherit;
        }
    }
}

.m24-c-menu-panel {
    background-color: $color-white;
    color: $color-black;
    height: auto;
    overflow: hidden auto;
    width: 100%;
    z-index: 1000;
    @include border-box;

    @media #{$mq-md} {
        border: $border-width solid $m24-color-light-mid-gray;
        border-radius: 0 0 $border-radius-md $border-radius-md;
        left: 50%;
        margin: 0 auto;
        overflow: auto;
        padding: 0;
        position: absolute;
        right: auto;
        top: 100%;
        transform: translateX(-50%);
        width: 400px;

        .mzp-is-scrolling & {
            // copied from the parent .mzp-is-scrolling definition, but edited to move it down so it doesn't appear to hover over top of the parent menu
            box-shadow: 0 6px 6px 1px rgba(29, 17, 51, 0.04), 0 8px 8px $border-width rgba(9, 32, 77, 0.12), 0 5px 5px -3px rgba(29, 17, 51, 0.12);
        }
    }
}

.m24-mzp-is-basic .m24-c-menu-panel {
    display: block;

    @media #{$mq-md} {
        display: none;
    }
}

.m24-mzp-is-enhanced .m24-c-menu-panel {
    display: block;

    @media #{$mq-md} {
        display: none;
    }
}

.m24-c-menu-subtitle {
    color: $m24-color-dark-mid-gray;
    margin: 0;
    padding: $spacing-md 0 $spacing-sm;
}

.m24-mzp-l-content {
    margin-bottom: 0;
}

// wraps panel content
.m24-c-menu-panel-container {
    margin: 0 auto;
    max-width: $content-max;

    @media #{$mq-md} {
        padding: $spacer-lg 0;
    }
}

.m24-c-menu-panel-content.multi-column {
    @media #{$mq-md} {
        display: flex;
        padding: 0 $grid-margin;
        column-gap: $layout-lg;
        margin: 0 auto;
    }
}

.m24-c-menu-item-link {
    display: block;
    padding: 8px 0;

    li:last-child > & {
        padding-bottom: 0;
    }
}

// Menu panel close button shown on desktop sized view ports.
.m24-c-menu-button-close {
    @include bidi(((right, 15px, left, auto), (left, auto, right, 15px)));
    @include image-replaced;
    background: $color-white url('/media/protocol/img/icons/close.svg') center center no-repeat;
    @include background-size(20px, 20px);
    border: $border-width solid transparent;
    cursor: pointer;
    display: none;
    height: 24px;
    padding: var(--spacer-xs);
    position: absolute;
    top: 15px;
    width: 24px;
    transition: border-color $fast $bezier;

    &:hover,
    &:focus {
        border-color: $m24-color-mid-gray;
    }
}

// page content - hide all content except for the nav when mobile nav menu is open
// This is not part of Protocol, it is specific to Springfield; should be documented in future
body:has(.m24-c-navigation-items.mzp-is-open) {
    & > .m24-pencil-banner,
    & > .c-sub-navigation,
    & > .moz-consent-banner.is-visible,
    & > .c-banner.c-banner-is-visible,
    & > #outer-wrapper {
        display: none !important; /* stylelint-disable-line declaration-no-important */

        @media #{$mq-md} {
            display: block !important; /* stylelint-disable-line declaration-no-important */
        }
    }
}


// * -------------------------------------------------------------------------- */
// Download button

.m24-navigation { /* stylelint-disable-line no-duplicate-selectors */
    .mzp-c-button-download-container {
        margin-bottom: 0;

        // don't show the unsupported message, just hide download button
        .fx-unsupported & {
            display: none;
        }
    }

    // hide privacy link
    .mzp-c-button-download-privacy-link {
        display: none;
    }
}

// displays on mobile
.m24-c-menu-download {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    display: block;
    background-color: $color-white;
    border-top: 1px solid $m24-color-light-mid-gray;
    padding: $spacing-md;
    z-index: 1000;

    .mzp-c-button-download-container {
        display: block;
        box-sizing: border-box;
        width: 100%;
    }

    .download-link {
        width: 100%;
    }

    @media #{$mq-md} {
        display: none;
    }
}

// displays on desktop
.mzp-c-navigation-download {
    display: none;

    @media #{$mq-md} {
        display: inline-block;
    }
}

